aks-cluster-files/project-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aloke-ns-green 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  namespace: aloke-ns-green
spec:
  selector:
    matchLabels:
      app: green
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: greencontainer
        image: devopesakscr.azurecr.io/devopsrepository:$(Build.BuildId)
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
  namespace: aloke-ns-green
  labels:
    service: green-svc
spec:
  type: ClusterIP
  selector:
    app: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
