aks-cluster-files/public-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pub-ingress-project-aks01
  namespace: project-aks01
  annotations:
    kubernetes.io/ingress.class: public-nginx           
    nginx.ingress.kubernetes.io/ssl-redirect: "false"       
spec:
  rules:
  - host: projectaks02.alokeg.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-aks01-service
            port:
              number: 80
